# makewords

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  notebook.ipynb  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
data/: etl.py
data/flow/: run.py  util.py
data/processed/: import.py
data/raw/: import.sh
notebooks/: fochlach.ipynb  notebook-spellingbee.ipynb  notebook-std.ipynb  notebook-wordle.ipynb
src/makewords/: __init__.py  __main__.py  conf.py  filters.py  makewords.py  run.py  score.py  util.py
src/makewords/game/: spellingbee.py  wordle.py
tests/: test_filters.py  test_makewords.py  test_util.py  test_wordle.py
tests/data/: test_flow.py  test_flow_util.py
tests/makewords/: test_makewords.py
