[metadata]
name = makewords-mwalpole
version = 0.1.3
author = Mark Walpole 
author_email = mark.walpole.dev@gmail.com
description = Make words from letters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mwalpole/makewords
project_urls =
    Bug Tracker = https://github.com/mwalpole/makewords/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.package_data]
* = *.dat

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    makewords = makewords.__main__:main
    wordle = makewords.game.wordle:main

[options.extras_require]
data =
    nltk
    prefect
lint =
    flake8
    black
notebooks =
    jupyter
    nltk
    numpy
    pandas
tests =
    pytest
    pytest-cov
    tox
